// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/PermalinkView should match snapshot 1`] = `
<div
  className="app__content"
  id="app-content"
>
  <withRouter(Connect(ChannelHeader))
    channelId="channel_id"
  />
  <withRouter(Connect(PostView))
    channelId="channel_id"
    focusedPostId="post_id"
  />
  <div
    id="archive-link-home"
  >
    <Link
      to="/team_name/channels/channel_name"
    >
      <FormattedMessage
        defaultMessage="Click here to jump to recent messages. "
        id="center_panel.recent"
        values={Object {}}
      />
      <i
        className="fa fa-arrow-down"
        title="Jump to recent messages Icon"
      />
    </Link>
  </div>
</div>
`;

exports[`components/PermalinkView should match snapshot with archived channel 1`] = `
<div
  className="app__content"
  id="app-content"
>
  <withRouter(Connect(ChannelHeader))
    channelId="channel_id"
  />
  <withRouter(Connect(PostView))
    channelId="channel_id"
    focusedPostId="post_id"
  />
  <div
    id="archive-link-home"
  >
    <Link
      to="/team_name/channels/channel_name"
    >
      <InjectIntl(FormattedMarkdownMessage)
        defaultMessage="You are viewing an **archived channel**. "
        id="center_panel.permalink.archivedChannel"
      />
      <FormattedMessage
        defaultMessage="Click here to jump to recent messages. "
        id="center_panel.recent"
        values={Object {}}
      />
      <i
        className="fa fa-arrow-down"
        title="Jump to recent messages Icon"
      />
    </Link>
  </div>
</div>
`;
